[package]
name = "hello_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
async-stream = "0.3.6"
axum = "0.8.4"
crossbeam = "0.8"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
tokenizers = "0.22.1"
minijinja = "2.12.0"

[[bin]]
name = "test_tokenizer"
path = "src/test_tokenizer.rs"
